:beers: Added edit profile  to endpoint
