# docs/swagger.yaml
@@ -18,6 +18,23 @@ definitions:
     - emailOrUserTag
     - password
     type: object
+  models.ProfileUpdateRequest:
+    properties:
+      address:
+        type: string
+      bio:
+        type: string
+      firstName:
+        type: string
+      lastName:
+        type: string
+      phone:
+        type: string
+      profilePicture:
+        type: string
+      userTag:
+        type: string
+    type: object
   models.RegisterRequest:
     properties:
       email:
@@ -363,4 +380,52 @@ paths:
       summary: Verify OTP
       tags:
       - Users
+  /user/profile:
+    put:
+      consumes:
+      - application/json
+      description: This endpoint allows users to update their profile information
+        such as FirstName, LastName, Bio, Phone, Address, and ProfilePicture. It also
+        checks if the provided userTag is available before assigning it.
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User Profile Update
+        in: body
+        name: profile
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProfileUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Profile updated successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid request payload or permission denied
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: UserTag is already taken
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update User Profile
+      tags:
+      - User
 swagger: "2.0"
